[package]
name = "bitfinity"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true


[dependencies]
reth.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-node-core.workspace = true
reth-node-ethereum.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-tracing.workspace = true
reth-interfaces.workspace = true
reth-network-types.workspace = true
reth-db.workspace = true
reth-downloaders.workspace = true
reth-stages.workspace = true
reth-config.workspace = true
reth-beacon-consensus.workspace = true
reth-static-file.workspace = true
reth-node-events.workspace = true
reth-consensus.workspace = true


clap.workspace = true
eyre.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
rayon.workspace = true
itertools.workspace = true
thiserror.workspace = true
alloy-rlp.workspace = true
futures.workspace = true
confy.workspace = true
async-trait.workspace = true

# Bitfinity Deps
candid = "0.10"
did = { git = "https://github.com/bitfinity-network/bitfinity-evm-sdk", package = "did", tag = "v0.18.x" }
ethereum-json-rpc-client = { git = "https://github.com/bitfinity-network/bitfinity-evm-sdk", package = "ethereum-json-rpc-client", tag = "v0.18.x", features = [
    "reqwest",
] }
ic-cbor = "2.3"
ic-certificate-verification = "2.3"
ic-certification = "2.3"
hex = "0.4"
lightspeed_scheduler = { version = "0.58.0", features = ["tracing"] }
rlp = "0.5"
