[package]
name = "reth-ethereum-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-chainspec.workspace = true
reth-consensus-common.workspace = true
reth-primitives.workspace = true
reth-consensus.workspace = true

# bitfinity
async-trait.workspace = true
did.workspace = true
evm-canister-client.workspace = true
ic-agent.workspace = true
ic-canister-client.workspace = true

tracing.workspace = true
